--- a/crypto.htm
+++ b/crypto.htm
@@ -307,6 +307,19 @@
 
             <canvas id="chart"></canvas>
         </section>
+
+        <!--section right-->
+        <section class="right">
+            <!--investments-->
+            <div class="investment">
+                <div class="header">
+                    <h2>Investments</h2>
+                    <a href="#">More</a>
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 
