--- a/crypto.htm
+++ b/crypto.htm
@@ -311,10 +311,75 @@
         <!--section right-->
         <section class="right">
             <!--investments-->
-            <div class="investment">
+            <div class="investments">
                 <div class="header">
                     <h2>Investments</h2>
-                    <a href="#">More</a>
+                    <a href="#">More<span class="material-symbols-sharp">expand_more</span></a>
+                </div>
+                <!--investment var-->
+                <div class="investment">
+                    <img src="tesla.png" alt="inv1">
+                    <h4>Tesla</h4>
+                    <div class="date-time">
+                        <p>7 Feb, 2023</p> 
+                        <small class="text-muted">9:14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$196,81</h4>
+                        <small class="success">+1.85%</small>
+                    </div>
+                </div>
+                <div class="investment">
+                    <img src="mcdonalds.png" alt="inv2">
+                    <h4>Mcdonalds</h4>
+                    <div class="date-time">
+                        <p>7 Feb, 2023</p> 
+                        <small class="text-muted">9:14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$267,340</h4>
+                        <small class="danger">-0.22%</small>
+                    </div>
+                </div>
+                <div class="investment">
+                    <img src="uniliver.png" alt="inv3">
+                    <h4>Uniliver</h4>
+                    <div class="date-time">
+                        <p>7 Feb, 2023</p> 
+                        <small class="text-muted">9:14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$49,670</h4>
+                        <small class="danger">-1.39%</small>
+                    </div>
+                </div>
+                <div class="investment">
+                    <img src="monster.png" alt="inv4">
+                    <h4>Monster</h4>
+                    <div class="date-time">
+                        <p>7 Feb, 2023</p> 
+                        <small class="text-muted">9:14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$102,51</h4>
+                        <small class="danger">-0.30%</small>
+                    </div>
                 </div>
             </div>
 
