--- a/crypto.htm
+++ b/crypto.htm
@@ -383,6 +383,141 @@
                 </div>
             </div>
 
+            <!--recent transaction-->
+            <div class="recent-transaction">
+                <div class="header">
+                    <h2>Recent Transation</h2>
+                    <a href="#">More<span class="material-symbols-sharp">expand_more</span></a>
+                </div>
+
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-purple-light">
+                            <span class="material-symbols-sharp">headphones</span>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h4>Music</h4>
+                        <p>07.02.2023</p>
+                    </div>
+                    <div class="card-details">
+                        <div class="card bg-danger">
+                            <img src="visa.png" alt="card1">
+                        </div>
+                        <div class="details">
+                            <p>3034</p>
+                            <small>Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$8</h4>
+                </div>
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-purple-light">
+                            <span class="material-symbols-sharp">shopping_bag</span>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h4>Shopping</h4>
+                        <p>07.02.2023</p>
+                    </div>
+                    <div class="card-details">
+                        <div class="card bg-primary">
+                            <img src="visa.png" alt="card1">
+                        </div>
+                        <div class="details">
+                            <p>3034</p>
+                            <small>Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$4300</h4>
+                </div>
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-purple-light">
+                            <span class="material-symbols-sharp">restaurant</span>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h4>Resturant</h4>
+                        <p>07.02/2023</p>
+                    </div>
+                    <div class="card-details">
+                        <div class="card bg-dark">
+                            <img src="master card.png" alt="card2">
+                        </div>
+                        <div class="details">
+                            <p>1616</p>
+                            <small>Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$20</h4>
+                </div>
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-danger-light">
+                            <span class="material-symbols-sharp">sport_esports</span>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h4>Games</h4>
+                        <p>07.02/2023</p>
+                    </div>
+                    <div class="card-details">
+                        <div class="card bg-danger">
+                            <img src="visa.png" alt="card1">
+                        </div>
+                        <div class="details">
+                            <p>2488</p>
+                            <small>Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$31</h4>
+                </div>
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-purple-light">
+                            <span class="material-symbols-sharp">medication</span>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h4>Pharmacy</h4>
+                        <p>07.02/2023</p>
+                    </div>
+                    <div class="card-details">
+                        <div class="card bg-danger">
+                            <img src="visa.png" alt="card1">
+                        </div>
+                        <div class="details">
+                            <p>2757</p>
+                            <small>Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$44</h4>
+                </div>
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-purple-light">
+                            <span class="material-symbols-sharp">fitness_center</span>
+                        </div>
+                    </div>
+                    <div class="details">
+                        <h4>Fitness</h4>
+                        <p>07.02/2023</p>
+                    </div>
+                    <div class="card-details">
+                        <div class="card bg-dark">
+                            <img src="master card.png" alt="card2">
+                        </div>
+                        <div class="details">
+                            <p>0765</p>
+                            <small>Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$19</h4>
+                </div>
+            </div>
+
         </section>
 
     </main>
