--- a/crypto.htm
+++ b/crypto.htm
@@ -384,7 +384,7 @@
             </div>
 
             <!--recent transaction-->
-            <div class="recent-transaction">
+            <div class="recent-transactions">
                 <div class="header">
                     <h2>Recent Transation</h2>
                     <a href="#">More<span class="material-symbols-sharp">expand_more</span></a>
@@ -430,7 +430,7 @@
                             <small>Credit Card</small>
                         </div>
                     </div>
-                    <h4>-$4300</h4>
+                    <h4>-$4</h4>
                 </div>
                 <div class="transaction">
                     <div class="service">
@@ -456,7 +456,7 @@
                 <div class="transaction">
                     <div class="service">
                         <div class="icon bg-danger-light">
-                            <span class="material-symbols-sharp">sport_esports</span>
+                            <span class="material-symbols-sharp">sports_esports</span>
                         </div>
                     </div>
                     <div class="details">
